manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: analytics-stress.samjna.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: analytics
                port:
                  number: 8001
